[gd_scene load_steps=2 format=3 uid="uid://df7tv1bfy8slc"]

[ext_resource type="Script" uid="uid://dxu7121sbjpfj" path="res://strato_defense/building_template/building.gd" id="1_erv7f"]

[node name="Building" type="Area2D"]
modulate = Color(0, 1, 1, 1)
collision_layer = 16
collision_mask = 16
script = ExtResource("1_erv7f")

[node name="CollisionPolygon" type="CollisionPolygon2D" parent="."]
unique_name_in_owner = true
polygon = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)

[node name="TorsoLine" type="Line2D" parent="."]
unique_name_in_owner = true
points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
closed = true
width = 5.0
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
